# welcome-guide

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: 1-feature-request.yml  1-issue.yml
.github/workflows/: docs.yml  lint.yml  pages.yml  test.yml
docs/sources/: index.md  nutshell.md  quickstart.md  readme.md  sample_scripts.md  software_pages.md  workflows.md
docs/sources/dev_guide/: contributing.md  docs.md  setup.md  testing.md
docs/sources/onboarding/: basic_setup.md  cluster_setup.md  development.md  index.md  local_setup.md
docs/sources/resources/: links.md  snippets.md  tips.md  troubleshooting.md
docs/sources/resources/files/kpt_set_change_error/: INCAR  run.py  vasp.sh
docs/sources/sample_scripts/: index.md
docs/sources/samples/: bash.md  espresso.md  gaussian.md  index.md  orca.md  python.md  slurm.md  vasp.md
docs/sources/software_pages/: ase.md  compute_canada.md  index.md  pymatgen.md  python.md  slurm.md  vasp.md
docs/sources/tutorials/: cccdb.md  ccdb.md  cluster_setup.md  data_transfer.md  espresso_compilation.md  first_calc.md  index.md  optimizing_requests.md  vasp_ir.md
samples/: cluster_setup_files.tar
samples/cluster_setup_files/: cluster_setup_files.tar
samples/cluster_setup_files/software_scripts/: configure_software.bash  install_custom_commands.bash
samples/python/: run.py  run_ase.py  run_ccu.py  run_espresso.py  run_gaussian.py  run_infrared_ccu.py  run_neb.py  run_vasp.py  run_vib.py  run_vib_ccu.py
samples/python/ase_tests/first_test/: AtomManip.py
samples/python/ase_tests/gpaw_test/: example.py  exercise.py
samples/python/ase_tests/vasp_test/: vaspTest.py
samples/slurm/: AseOrcaJob.sh  AseVaspJob.sh  InteractiveJob.sh  README.md  activateASEGaussian.sh  activateASEORCA.sh  activateASEVasp.sh  activateGaussian.sh  activateORCA.sh  espresso.sh  gaussian.sh  vasp.sh
tests/: test_atom_manipulations.py  test_gpaw.py  test_vasp.py
tests/first_test/: AtomManip.py  WL.py  test_atom_manipulations.py
tests/gpaw_test/: example.py  exercise.py
tests/vasp_test/: vaspTest.py
