[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "welcome-guide"
description = "a comprehensive guide to the tools used in ComCat Lab"
readme = "README.md"
requires-python = ">=3.10"
version = "0.0.1a1"
authors = [
  { name = "Ugo Nwosu", email = "ugognw@gmail.com" },
  { name = "Ugo Nwosu", email = "ugn@sfu.ca" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Operating System :: Unix",
  "Operating System :: POSIX",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Physics",
]

[project.urls]
Documentation = "https://github.com/ComCatLab/welcome-guide/README.md"
PRs = "https://github.com/ComCatLab/welcome-guide/pull"
Issues = "https://github.com/ComCatLab/welcome-guide/issues"
Source = "https://github.com/ComCatLab/welcome-guide"

[tool.black]
target-version = ["py310", "py311", "py312"]
line-length = 79
skip-string-normalization = true

[tool.coverage.run]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.envs.default]
dependencies = [
  "ase==3.23.0",  # 2024-05-03
  "numpy>=1.24.2",
  "pymatgen>=2024.6.10",
  "cclib==1.8",
  "mkdocs",
  "mkdocs-material",
  "mypy==1.10.0",
  "pytest==8.2.2",
  "pytest-cov==5.0.0",
  "pytest-datadir==1.5.0",
  "pytest-xdist==3.6.1",
  "ruff==0.5.0",
]
python = "3.11"

[tool.hatch.envs.tutorials]
dependencies = [
  "ase @ git+https://gitlab.com/ase/ase.git@development",  # 2023-12-03
  "numpy>=1.24.2",
  "pymatgen>=2024.6.10",
  "cclib==1.8",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "pytest -n auto --cov-branch --cov=src/autojob --cov-report=html --cov-report=lcov --cov-report=xml --cov-report=term-missing {args:tests/}"

[tool.hatch.envs.docs]
dependencies = [
    "mkdocs",
    "mkdocs-material",
]
detached = true

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "mypy==1.10.0",
  "ruff==0.5.0",
]
python = "3.11"

[tool.hatch.envs.lint.scripts]
typing = "mypy --strict --install-types --non-interactive src/autojob/ tests/"
style = [
  "ruff {args:.}",
]
fmt = [
  "ruff format {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]

[tool.hatch.envs.test]
dependencies = [
  "pytest==8.2.2",
  "pytest-cov==5.0.0",
  "pytest-datadir==1.5.0",
  "pytest-xdist==3.6.1",
]

[[tool.hatch.envs.test.matrix]]
python = [
  "3.10",
  "3.11",
  "3.12",
]
[tool.hatch.envs.tutorials.scripts]
export = "pip freeze > tutorial_requirements.txt"

[tool.hatch.metadata]
allow-direct-references = true

[[tool.mypy.overrides]]
module = "pymatgen"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = [
  "-n",
  "auto",
  "--import-mode=importlib",
  "-r A",
  "--strict-markers",
  "--doctest-modules",
  "--doctest-glob=*.rst",
  "--tb=short",
]
filterwarnings =[
  "error",
]
norecursedirs = "migrations"
python_files = [
  "test_*.py",
  "*_test.py",
  "tests.py"
]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 79
select = [
  "A",
  "ARG",
  "B",
  "C",
  "C4",
  "DTZ",
  "E",
  "EM",
  "EXE",
  "F",
  "FBT",
  "I",
  "ICN",
  "INT",
  "ISC",
  "N",
  "PIE",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "PT",
  "PTH",
  "Q",
  "RSE",
  "RUF",
  "S",
  "SIM",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107", "S603",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]  # allow module-import-not-at-top-of-file
"**/{tests,docs,tools}/*" = ["E402"]  # allow module-import-not-at-top-of-file
"**/tests/*" = ["S101"]  # allow assert

[tool.ruff.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.flake8-quotes]
inline-quotes = "double"

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.isort]
known-first-party = ["autojob"]

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]
