[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "welcome-guide"
description = "a comprehensive guide to the tools used in ComCat Lab"
readme = "README.md"
requires-python = ">=3.10"
version = "0.0.1a1"
authors = [
  { name = "Ugo Nwosu", email = "ugognw@gmail.com" },
  { name = "Ugo Nwosu", email = "ugn@sfu.ca" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Operating System :: Unix",
  "Operating System :: POSIX",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  # 2024-05-03
  "ase>=3.23.0",
  # 2024-07-23
  "numpy>=1.24.2,<2.0.0",
  # 2024-06-10
  "pymatgen>=2024.6.10",
  # 2024-03-18
  "cclib==1.8",
]

[project.optional-dependencies]
test = [
  # 2024-07-20
  "pytest>=8.3.1",
  # 2024-03-24
  "pytest-cov>=5.0.0",
  # 2023-10-03
  "pytest-datadir>=1.5.0",
  # 2024-04-28
  "pytest-xdist>=3.6.1",
]
dev = [
  # 2024-05-10
  "pre-commit>=3.7.0",
]
docs = [
  # 2024-04-20
  "mkdocs>=1.6.0",
  # 2024-07-23
  "mkdocs-material>=9.5.30",
  # 2022-08-1
  "mdx_truly_sane_lists>=1.3",
  # 2022-03-22
  "mkdocs-git-revision-date-plugin>=0.3.2"
]

[project.urls]
Documentation = "https://github.com/ComCatLab/welcome-guide/README.md"
PRs = "https://github.com/ComCatLab/welcome-guide/pull"
Issues = "https://github.com/ComCatLab/welcome-guide/issues"
Source = "https://github.com/ComCatLab/welcome-guide"

[tool.coverage.run]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.envs.default]
# use "features" until PEP 735 decided upon
# https://discuss.python.org/t/pep-735-dependency-groups-in-pyproject-toml/39233/7
features = ["test", "dev", "docs"]
python = "3.11"

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "pytest -n auto --cov-branch --cov=src/autojob --cov-report=html --cov-report=lcov --cov-report=xml --cov-report=term-missing {args:tests/}"

[tool.hatch.envs.docs]
features = ["docs"]
detached = true

[tool.hatch.envs.docs.scripts]
# Update this command whenever new files are added to the docs/source/ directory
build-pdf = "cd docs/sources || exit; pandoc --file-scope -s -o ../../comcat-lab-welcome-guide.pdf -f markdown -t pdf index.md quickstart.md nutshell.md software_pages.md samples/index.md samples/index.md samples/bash.md samples/python.md samples/slurm.md tutorials/index.md tutorials/index.md tutorials/ccdb.md tutorials/data_transfer.md tutorials/espresso_compilation.md tutorials/optimizing_requests.md tutorials/vasp_ir.md resources/*.md dev_guide/*.md; cd ../../ || exit"

[tool.hatch.envs.test]
features = ["test"]

[[tool.hatch.envs.test.matrix]]
python = [
  "3.10",
  "3.11",
  "3.12",
]

[tool.hatch.metadata]
allow-direct-references = true

[[tool.mypy.overrides]]
module = "pymatgen"
ignore_missing_imports = true
strict = true

[tool.pytest.ini_options]
addopts = [
  "-n",
  "auto",
  "--import-mode=importlib",
  "-r A",
  "--strict-markers",
  "--doctest-modules",
  "--doctest-glob=*.rst",
  "--tb=short",
]
filterwarnings =[
  "error",
]
norecursedirs = "migrations"
python_files = [
  "test_*.py",
  "*_test.py",
  "tests.py"
]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 79

[tool.ruff.lint]
select = [
  "A",
  "ARG",
  "B",
  "C",
  "C4",
  "DTZ",
  "E",
  "EM",
  "EXE",
  "F",
  "FBT",
  "I",
  "ICN",
  "INT",
  "ISC",
  "N",
  "PIE",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "PT",
  "PTH",
  "Q",
  "RSE",
  "RUF",
  "S",
  "SIM",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107", "S603",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
  # single-lint implicity string concatenation
  "ISC001",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]  # allow module-import-not-at-top-of-file
"**/{tests,docs,tools}/*" = ["E402"]  # allow module-import-not-at-top-of-file
"**/tests/*" = ["S101"]  # allow assert
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
known-first-party = ["welcome_guide"]
